# django-cloud-provider-regions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
region_data/: README.md  aws_az.json  aws_provider.json  aws_region.json  aws_unprocessed.json  azu_az.json  azu_provider.json  azu_region.json  azu_unprocessed.json  gcp_az.json  gcp_provider.json  gcp_region.json  gcp_unprocessed.json  normalized_azs.json  normalized_regions.json
src/django_cloud_provider_zones/: admin.py  apps.py  cloud_short_names.py  models.py  serializers.py  tests.py  urls.py  views.py
src/django_cloud_provider_zones/fixtures/: django_cloud_provider_zones-CloudAvailabilityZone.json  django_cloud_provider_zones-CloudProvider.json  django_cloud_provider_zones-CloudRegion.json  django_cloud_provider_zones.json
src/django_cloud_provider_zones/migrations/: 0001_initial.py
tasks/: README.md  __init__.py  aws_update_regions_json.py  boot_django.py  cloud_short_names.py  constants.py  django_management_commands.py  django_model_classes.py  fetch_data_aws.py  format_json_aws  format_json_azure  format_json_gcp  gcp_update_regions_json.py  get_aws_regions.py  get_cloud_region_short_names.py  json_insert_format.py  makemigrations.py  migrate.py  update_aws_regions.py  update_db_from_json.py  update_django_db_from_json.py
