[tool.poetry]
name = "django-cloud-provider-zones"
version = "0.1.8"
description = "Django app providing a static list of cloud provider regions and AZs"
authors = ["TJ <yolabingo@gmail.com>"]
readme = "README.md"
license = "src/django_cloud_provider_zones/LICENSE"
packages = [{include = "django_cloud_provider_zones", from = "src"}]
repository = "https://github.com/yolabingo/django-cloud-provider-zones"
keywords = ["django", "cloud", "provider", "regions", "aws", "gcp"]

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5"
djangorestframework = "^3.15.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
boto3 = "^1.34.64"
invoke = "^2.2.0"
pre-commit = "^3.6.2"
emoji = "^2.10.1"
tox = "^4.14.1"
django-extensions = "^3.2.3"
pyparsing = "^3.1.2"
pydot = "^2.0.0"
werkzeug = "^3.0.1"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
